--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,8 @@ dmypy.json
 
 sentiment_analysis/discriminative_model/sentiment-analysis
 sentiment_analysis/discriminative_model/sentiment-analysis-synthetic-data
+
+esg_text_classification/bert-esg-outputs
+esg_text_classification/filtered_outputs
+
+dataset/us_equities_news_dataset.csv
